--- a/index.html
+++ b/index.html
@@ -74,17 +74,11 @@
 	$('.carousel.carousel-slider').carousel({full_width: true});
 </script>
 
-<!--Floating button-->
+<!--Responsive Video Embedding-->
 
- <div class="fixed-action-btn horizontal">
-     <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
-    <ul>
-      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
-    </ul>
-  </div>
+	  <div class="container">
+        <iframe width="1000" height="500" src="https://www.youtube.com/embed/Hc_0N7V7JRA" frameborder="0" ></iframe>
+	</div>
         
 
 	</body>
